# osinfo

./: .clang-format  .gitignore  BUILD.gn  LICENSE.md  Makefile  README.md  clang_format.sh  export.h  framework.h  os_info.cc  os_info.h  os_info_dll.h  osinfo.def  osinfo.manifest  resource.rc  stdafx.h  version.h
docs/: shlwapi.md
public/: cpuinfo.h  lib_export.h  libosinfo.h  osinfo.def
src/: cpu.cc  cpu.h  framework.h  os_info.cc  os_info.h  resource.rc  version.h
test/: BUILD.gn  resource.rc  test_framework.h  test_osinfo_shared.cc  test_osinfo_static.cc  version.h
