# Copyright (c) 2026 Alex313031

# osinfo is a static/shared library for retrieving Windows OS version information.
# It also provides CPU information like number of cores, raw model number, and SIMD support levels.

# Build everything
group("osinfo") {
  public_deps = [
    ":osinfo_dll",
    ":osinfo_static",
  ]
}

# Builds osinfo.dll
shared_library("osinfo_dll") {
  configs += [ ":osinfo_private_config", ]
  defines = [ "OSINFO_DLL_EXPORTS=1", ]

  sources = [
    "framework.h",
    "libosinfo.h",
    "os_info.cc",
    "os_info.h",
    "resource.rc",
    "version.h",
  ]

  output_name = "osinfo"
}

# Builds libosinfo.a (or .lib for MSVC)
static_library("osinfo_static") {
  configs += [ ":osinfo_private_config", ]
  defines = [ "OSINFO_STATIC_LIB=1", ]

  sources = [
    "framework.h",
    "libosinfo.h",
    "os_info.cc",
    "os_info.h",
    "version.h",
  ]

  output_name = "osinfo"
}

# Private config for osinfo itself, shared/static agnostic.
config("osinfo_private_config") {
  include_dirs = [ "./", ]
  cflags = [ "-Wunused-function" ]
}

# Public shared lib config for outside consumers of the .dll
config("osinfo_shared_config") {
  defines = [ "OSINFO_DLL_IMPORTS=1", "SHARED_OSINFO", ]
  include_dirs = [ "./public", ]
}

# Public static lib config for outside consumers of the .lib/.a
config("osinfo_static_config") {
  defines = [ "OSINFO_STATIC_LIB=1", "STATIC_OSINFO", ]
  include_dirs = [ "./public", ]
}
